# amudai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
rust/amudai/: Cargo.toml
rust/amudai-arrow/: Cargo.toml
rust/amudai-arrow-compat/: Cargo.toml
rust/amudai-arrow-compat/src/: amudai_to_arrow_error.rs  amudai_to_arrow_schema.rs  any_value_support.rs  arrow_fields.rs  arrow_to_amudai_schema.rs  buffers.rs  datetime_conversions.rs  decimal_conversions.rs  lib.rs  sequence_to_array.rs
rust/amudai-arrow/src/: array_reader.rs  builder.rs  lib.rs  shard_reader.rs
rust/amudai-blockstream/: Cargo.toml
rust/amudai-blockstream/src/: lib.rs
rust/amudai-blockstream/src/read/: bit_buffer.rs  block_map.rs  block_map_decoder.rs  block_map_ops.rs  block_stream.rs  bytes_buffer.rs  generic_buffer.rs  mod.rs  primitive_buffer.rs
rust/amudai-blockstream/src/write/: bit_buffer.rs  block_map_encoder.rs  block_stream.rs  bytes_buffer.rs  mod.rs  primitive_buffer.rs  staging_buffer.rs
rust/amudai-common/: Cargo.toml
rust/amudai-common/src/: async_runtime.rs  error.rs  lib.rs  macros.rs  result.rs
rust/amudai-data-stats/: Cargo.toml
rust/amudai-data-stats/src/: binary.rs  boolean.rs  container.rs  decimal.rs  floating.rs  lib.rs  primitive.rs  sketch_ext.rs  string.rs
rust/amudai-encodings/: Cargo.toml  README.md
rust/amudai-encodings/src/: binary_block_decoder.rs  binary_block_encoder.rs  block_decoder.rs  block_encoder.rs  buffers_pool.rs  lib.rs  primitive_block_decoder.rs  primitive_block_encoder.rs  sampler.rs
rust/amudai-encodings/src/encodings/: mod.rs  presence.rs
rust/amudai-format/: Cargo.toml
rust/amudai-format/src/: checksum.rs  lib.rs  projection.rs  property_bag.rs  schema.rs  schema_builder.rs  tests.rs
rust/amudai-format/src/defs/: amudai.common.rs  amudai.shard.rs  anyvalue_ext.rs  bytes_list_ext.rs  common_ext.rs  data_ref_ext.rs  field_ext.rs  hash_lookup_ext.rs  mod.rs  schema.fbs.rs  schema_ext.rs  shard_ext.rs  stripe_ext.rs
rust/amudai-hashmap-index/: Cargo.toml
rust/amudai-hashmap-index/src/: field_hashing_index.rs  lib.rs
rust/amudai-hashmap-index/src/read/: field_hashing_index_reader.rs  hashmap_index.rs  mod.rs
rust/amudai-hashmap-index/src/write/: aggregator.rs  builder.rs  field_hashing_index_builder.rs  hashmap_index_builder.rs  mod.rs
rust/amudai-hashmap-index/tests/: field_hashing_index_tests.rs  hashmap_index_tests.rs
rust/amudai-index-core/: Cargo.toml
rust/amudai-index-core/src/: builder.rs  lib.rs  maintainer.rs  metadata.rs  reader.rs  registry.rs  shard_markers.rs
rust/amudai-io/: Cargo.toml
rust/amudai-io-impl/: Cargo.toml
rust/amudai-io-impl/src/: direct_file.rs  io_pool.rs  lib.rs  prefetch_read.rs
rust/amudai-io-impl/src/fs/: direct_file.rs  mod.rs  shared.rs  unix.rs  windows.rs
rust/amudai-io-impl/src/temp_file_store/: file.rs  file_based_cached.rs  file_based_common.rs  file_based_uncached.rs  fs_cached.rs  fs_common.rs  fs_uncached.rs  memory.rs  mod.rs  tests.rs
rust/amudai-io/src/: file.rs  io_extensions.rs  lib.rs  memory.rs  precached_read.rs  sliced_read.rs  utils.rs
rust/amudai-io/src/temp_file_store/: mod.rs  null_temp_store.rs
rust/amudai-io/src/utils/: align_write.rs  file.rs  memory.rs  mod.rs  precached_read.rs  read_adapter.rs  sliced_file.rs
rust/amudai-objectstore/: Cargo.toml
rust/amudai-objectstore/src/: default_resolver.rs  lib.rs  local_store.rs  null_store.rs  url.rs
rust/amudai-sequence/: Cargo.toml
rust/amudai-sequence/src/: fixed_list_sequence.rs  frame.rs  json_printer.rs  lib.rs  list_sequence.rs  map_sequence.rs  offsets.rs  presence.rs  sequence.rs  sequence_reader.rs  struct_sequence.rs  value_sequence.rs  values.rs
rust/amudai-shard/: Cargo.toml  design_outline.md
rust/amudai-shard/src/: lib.rs
rust/amudai-shard/src/read/: anchored_element.rs  artifact_reader.rs  decimal_index.rs  element_memo.rs  field.rs  field_context.rs  mod.rs  numeric_index.rs  opened_artifact_cache.rs  properties.rs  shard.rs  shard_context.rs  stripe.rs  stripe_context.rs
rust/amudai-shard/src/tests/: bloom_filter_integration.rs  bytes_integration.rs  data_generator.rs  decimal_integration.rs  dictionary.rs  field_cursors.rs  floating_integration.rs  hll_sketch.rs  mod.rs  numeric_index.rs  shard_properties.rs  shard_store.rs
rust/amudai-shard/src/write/: artifact_writer.rs  decimal_index.rs  field_builder.rs  field_descriptor.rs  format_elements_ext.rs  mod.rs  numeric_index.rs  properties.rs  shard_builder.rs  stripe_builder.rs
rust/amudai-spill-data/: Cargo.toml
rust/amudai-spill-data/src/: bytes_vec.rs  lib.rs  manifest.rs  pod_vec.rs  segmented_vec.rs  std_impls.rs
rust/amudai-testkit/: Cargo.toml  build.rs
rust/amudai-testkit/src/: data_gen.rs  dirs.rs  lib.rs  py.rs
rust/amudai-text-index/: Cargo.toml
rust/amudai-text-index/src/: collation.rs  lib.rs  pos_list.rs  text_index.rs
rust/amudai-text-index/src/read/: btree.rs  index.rs  mod.rs  positions.rs  reader.rs
rust/amudai-text-index/src/tokenizers/: mod.rs  trivial.rs  unicode_log.rs  unicode_word.rs
rust/amudai-text-index/src/write/: btree.rs  builder.rs  encoder.rs  fragments.rs  mod.rs  page_record.rs  positions.rs  poslist_builder.rs  term_dictionary.rs
rust/amudai-text-index/tests/: text_index_tests.rs
rust/amudai/src/: lib.rs
rust/experiments/sequence_bench/: Cargo.toml
rust/experiments/sequence_bench/src/: main.rs
rust/support_crates/amudai-arrow-builders/: Cargo.toml
rust/support_crates/amudai-arrow-builders/src/: binary.rs  boolean.rs  lib.rs  list.rs  map.rs  primitive.rs  record_batch.rs  string.rs  (+2 more)
rust/support_crates/amudai-bloom-filters/: Cargo.toml
rust/support_crates/amudai-datetime/: Cargo.toml
rust/support_crates/amudai-decimal/: Cargo.toml  build.rs
rust/support_crates/amudai-guid/: Cargo.toml
rust/support_crates/amudai-hll/: Cargo.toml
rust/support_crates/amudai-position-set/: Cargo.toml
rust/support_crates/amudai-stopwatch/: Cargo.toml
rust/support_crates/amudai-unicode/: Cargo.toml  build.rs
rust/support_crates/arrow-builders-macros/: Cargo.toml
(+267 files in other folders)
