[workspace]
members = [
    "rust/amudai-arrow-compat",
    "rust/amudai-arrow",
    "rust/amudai-blockstream",
    "rust/amudai-common",
    "rust/amudai-data-stats",
    "rust/amudai-encodings",
    "rust/amudai-format",
    "rust/amudai-hashmap-index",
    "rust/amudai-index-core",
    "rust/amudai-io-impl",
    "rust/amudai-io",
    "rust/amudai-objectstore",
    "rust/amudai-sequence",
    "rust/amudai-shard",
    "rust/amudai-spill-data",
    "rust/amudai-testkit",
    "rust/amudai-text-index",
    "rust/amudai",
    "rust/support_crates/amudai-arrow-builders-macros",
    "rust/support_crates/amudai-arrow-builders",
    "rust/support_crates/amudai-arrow-processing",
    "rust/support_crates/amudai-bloom-filters",
    "rust/support_crates/amudai-budget-tracker",
    "rust/support_crates/amudai-bytes",
    "rust/support_crates/amudai-collections",
    "rust/support_crates/amudai-keyed-vector",
    "rust/support_crates/amudai-workflow",
    "rust/tools/amudai-cmd",
    "rust/tools/amudai-codegentool",
]

exclude = []

resolver = "2"

[workspace.package]
version = "0.2.26"
edition = "2024"
authors = ["Kusto Devs"]
readme = "README.md"
description = "Amudai columnar data format"
rust-version = "1.88"


[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
arrayref = "0.3"
arrow = "55"
arrow-arith = "55"
arrow-array = "55"
arrow-buffer = "55"
arrow-cast = "55"
arrow-csv = "55"
arrow-data = "55"
arrow-ipc = "55"
arrow-json = "55"
arrow-schema = "55"
arrow-select = "55"
async-trait = "0.1"
bincode = { version = "2", features = ["derive", "serde"] }
bitflags = "2.6"
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
const_for = "0.1"
decimal = "2.1"
fastrand = "2"
fsst-rs = "0.5"
futures = "0.3"
half = "2"
itertools = "0.14"
libc = "0.2"
log = "0.4"
lz4 = "1"
num-traits = "0.2"
ordered-float = "5"
paste = "1"
planus = "1"
prost = "0.13"
prost-build = "0.13"
quote = "1"
rayon = "1"
roaring = "0.10"
sbbf-rs = "0.2"
sbbf-rs-safe = "0.3"
seq-macro = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
syn = { version = "2", features = ["visit", "visit-mut"] }
tempfile = "3"
thiserror = "2"
tinyvec = "1.8"
tokio = "1"
unicode-segmentation = "1"
url = "2"
uuid = "1"
windows-sys = { version = "0.60", features = [
        "Win32_Foundation",
        "Win32_Storage_FileSystem",
        "Win32_System_IO"
    ] }
xshell = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
zstd = { version = "0.13" }

amudai = { version = "0.2.26", path = "rust/amudai" }
amudai-arrow = { version = "0.2.26", path = "rust/amudai-arrow" }
amudai-arrow-builders = { version = "0.2.26", path = "rust/support_crates/amudai-arrow-builders" }
amudai-arrow-builders-macros = { version = "0.2.26", path = "rust/support_crates/amudai-arrow-builders-macros" }
amudai-arrow-compat = { version = "0.2.26", path = "rust/amudai-arrow-compat" }
amudai-arrow-processing = { version = "0.2.26", path = "rust/support_crates/amudai-arrow-processing" }
amudai-blockstream = { version = "0.2.26", path = "rust/amudai-blockstream" }
amudai-bloom-filters = { version = "0.2.26", path = "rust/support_crates/amudai-bloom-filters" }
amudai-budget-tracker = { version = "0.2.26", path = "rust/support_crates/amudai-budget-tracker" }
amudai-bytes = { version = "0.2.26", path = "rust/support_crates/amudai-bytes" }
amudai-collections = { version = "0.2.26", path = "rust/support_crates/amudai-collections" }
amudai-common = { version = "0.2.26", path = "rust/amudai-common" }
amudai-data-stats = { version = "0.2.26", path = "rust/amudai-data-stats" }
amudai-encodings = { version = "0.2.26", path = "rust/amudai-encodings" }
amudai-format = { version = "0.2.26", path = "rust/amudai-format" }
amudai-hashmap-index = { version = "0.2.26", path = "rust/amudai-hashmap-index" }
amudai-index-core = { version = "0.2.26", path = "rust/amudai-index-core" }
amudai-io = { version = "0.2.26", path = "rust/amudai-io" }
amudai-io-impl = { version = "0.2.26", path = "rust/amudai-io-impl" }
amudai-keyed-vector = { version = "0.2.26", path = "rust/support_crates/amudai-keyed-vector" }
amudai-objectstore = { version = "0.2.26", path = "rust/amudai-objectstore" }
amudai-sequence = { version = "0.2.26", path = "rust/amudai-sequence" }
amudai-shard = { version = "0.2.26", path = "rust/amudai-shard" }
amudai-spill-data = { version = "0.2.26", path = "rust/amudai-spill-data" }
amudai-testkit = { version = "0.2.26", path = "rust/amudai-testkit" }
amudai-text-index = { version = "0.2.26", path = "rust/amudai-text-index" }
amudai-workflow = { version = "0.2.26", path = "rust/support_crates/amudai-workflow" }

[profile.devrel]
inherits = "release"
lto = "thin"
opt-level = 3
codegen-units = 16
debug = true
