[package]
name = "amudai-arrow-compat"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }

amudai-bytes = { workspace = true }
amudai-common = { workspace = true }
amudai-format = { workspace = true }
amudai-sequence = { workspace = true }
