[package]
name = "amudai-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
futures = { workspace = true }
planus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
