[package]
name = "amudai-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
bytemuck = { workspace = true }
decimal = { workspace = true }
planus = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }

amudai-bloom-filters = { workspace = true }
amudai-bytes = { workspace = true }
amudai-common = { workspace = true }
amudai-keyed-vector = { workspace = true }
