[package]
name = "amudai-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai-common = { workspace = true }
amudai-bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
