[package]
name = "amudai-objectstore"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai-common = { workspace = true }
amudai-io = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
