[package]
name = "amudai-sequence"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { workspace = true }
decimal = { workspace = true }

amudai-bytes = { workspace = true }
amudai-common = { workspace = true }
amudai-format = { workspace = true }
