[package]
name = "amudai-sequence"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

amudai-bytes = { workspace = true }
amudai-common = { workspace = true }
amudai-decimal = { workspace = true }
amudai-format = { workspace = true }
