[package]
name = "amudai-shard"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
bytemuck = { workspace = true }
fastrand = { workspace = true }
prost = { workspace = true }
tempfile = { workspace = true }

amudai-arrow-builders = { workspace = true }
amudai-arrow-compat = { workspace = true }
amudai-arrow-processing = { workspace = true }
amudai-blockstream = { workspace = true }
amudai-bloom-filters = { workspace = true }
amudai-bytes = { workspace = true }
amudai-common = { workspace = true }
amudai-data-stats = { workspace = true }
amudai-decimal = { workspace = true }
amudai-encodings = { workspace = true }
amudai-format = { workspace = true }
amudai-hll = { workspace = true }
amudai-index-core = { workspace = true }
amudai-io = { workspace = true }
amudai-io-impl = { workspace = true }
amudai-keyed-vector = { workspace = true }
amudai-objectstore = { workspace = true }
amudai-ranges = { workspace = true }
amudai-sequence = { workspace = true }
amudai-value-conversions = { workspace = true }

[dev-dependencies]
amudai-testkit = { workspace = true }
