[package]
name = "amudai-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai-arrow-builders = { workspace = true }
amudai-arrow-builders-macros = { workspace = true }
amudai-arrow-processing = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-csv = { workspace = true }
arrow-data = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
