[package]
name = "amudai-text-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
unicode-segmentation = { workspace = true }

amudai-common = { workspace = true }
