[package]
name = "sequence_bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai-bytes = { workspace = true }
amudai-sequence = { workspace = true }
bytemuck = { workspace = true }
fastrand = { workspace = true }
