[package]
name = "sequence_bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai = { workspace = true }
amudai-bytes = { workspace = true }
amudai-sequence = { workspace = true }
arrow = { workspace = true }
arrow-ipc = { workspace = true }
bytemuck = { workspace = true }
fastrand = { workspace = true }
csv = "1.3"
serde_json = "1.0"
