[package]
name = "amudai-decimal"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
serde = { optional = true, workspace = true }
num-traits = { workspace = true }
dtoa = { workspace = true }

[features]
default = ["serde"]

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
